connect,cursor,rowcount,fetchall useing

--- a/pylog/pylog.conf
+++ b/pylog/pylog.conf
@@ -15,8 +15,8 @@ level=DEBUG
 handlers=RotatingFileHandler
 
 [logger_simple]
-leve=DEBUG
-handlers=consoleHandler
+level=DEBUG
+handlers=FileHandler
 qualname=simple
 propagate=0
 
